--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "web-bluetooth-poc",
+  "homepage": "http://cheeyi.github.io/web-bluetooth-poc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "@types/web-bluetooth": "^0.0.12"
+    "@types/web-bluetooth": "^0.0.12",
+    "gh-pages": "^3.2.3"
   }
 }
